vendor/thiserror-1.0.24/tests/ui/lifetime.stderr
error: non-static lifetimes are not allowed in the source of an error, because std::error::Error requires the source is dyn Error + 'static
 --> $DIR/lifetime.rs:6:26
  |
6 | struct Error<'a>(#[from] Inner<'a>);
  |                          ^^^^^^^^^

error: non-static lifetimes are not allowed in the source of an error, because std::error::Error requires the source is dyn Error + 'static
  --> $DIR/lifetime.rs:15:17
   |
15 |     Foo(#[from] Generic<&'a str>),
   |                 ^^^^^^^^^^^^^^^^
